mod_cache: Fix uri_meets_conditions() so that CacheEnable will match by scheme, or by a wildcarded hostname. PR: 40169 Submitted by: Peter Grandi <pg_asf asf.for.sabi.co.uk> Reviewed by: Graham Leggett

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@821333 13f79535-47bb-0310-9956-ffa450edef68